[package]
name = "aws_instance_metadata"
version = "0.1.1"
authors = ["Mathieu Fenniak <mathieu@fenniak.net>"]
description = "Rust micro-library providing read access to AWS instance metadata"
homepage = "https://docs.rs/aws_instance_metadata"
repository = "https://github.com/mfenniak/aws_instance_metadata"
license = "MIT"

[dependencies]
rusoto = {version = "0.23", features = []}
hyper = "0.10"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
